gcc-9 (9.3.0-13) UNRELEASED; urgency=medium

  * Run the testsuite with the offload compilers installed into the temporary
    install location.
  * Don't require root for the temp installation of the offload compilers.

 -- Matthias Klose <doko@debian.org>  Wed, 13 May 2020 13:19:19 +0200

gcc-9 (9.3.0-12) unstable; urgency=medium

  * Update to git 20200507 from the gcc-9 branch.
    - Fix PR target/94613 (S390), PR tree-optimization/93674,
      PR target/94145 (PPC), PR target/93654 (x86), PR c++/94946,
      PR c++/90750, PR c++/79585, PR fortran/93581, PR fortran/93956,
      PR fortran/94788, PR d/90718, PR d/90719.
  * Fix PR target/94666 (S390), taken from the trunk.
  * Increase the testsuite timeout on riscv64.
  * Fix sparc64 multilib cross build (Helmut Grohne). Closes: #958909.
  * lib*stdc++6: Depend on lib*gcc-sN instead if lib*gccN.

 -- Matthias Klose <doko@debian.org>  Thu, 07 May 2020 16:59:19 +0200

gcc-9 (9.3.0-11) unstable; urgency=medium

  * Update to git 20200424 from the gcc-9 branch.
    - Fix PR target/94509 (x86), PR target/94488 (AArch64), PR debug/94459,
      PR target/94460 (x86), PR middle-end/94423, PR middle-end/94412,
      PR target/93069 (x86), PR tree-optimization/94329, PR middle-end/94303,
      PR debug/94283, PR debug/94283, PR debug/94277, PR target/94518 (AArch64),
      PR tree-optimization/94211, PR target/94500 (x86), PR c++/94512,
      PR gcov-profile/94029, PR c/94172, PR c++/94512, PR c++/94477,
      PR c++/94385, PR c++/93931, PR c++/90995, PR c++/93597, PR c++/91377,
      PR c++/94453, PR d/94240, PR fortran/93686, PR gcov-profile/94570,
      PR tree-optimization/94482, PR target/94556 (x86),
      PR target/94530 (AArch64), PR target/94396 (AArch64),
      PR target/94417 (x86), PR tree-optimization/94443,
      PR tree-optimization/94043, PR target/94557 (PPC), PR middle-end/94479,
      PR target/94584 (xtensa), PR target/94603 (x86), PR target/94494 (x86),