@@ -3,6 +3,8 @@ gcc-9 (9.3.0-13) UNRELEASED; urgency=medium
   * Run the testsuite with the offload compilers installed into the temporary
     install location.
   * Don't require root for the temp installation of the offload compilers.
+  * Don't override the libstdc++ test results when running the libstdc++ abi
+    check.
 
  -- Matthias Klose <doko@debian.org>  Wed, 13 May 2020 13:19:19 +0200
 
